# Unmuze

./: .gitignore  BUILD.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts  vitest.setup.ts
.github/release-notes/: v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md
.github/workflows/: ci.yml  platform-smoke.yml  release.yml
scripts/: check-release-tag.mjs  check-updater-artifacts.mjs  check-version-alignment.mjs
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  field.tsx  input.tsx  progress.tsx  select.tsx  separator.tsx  skeleton.tsx  sonner.tsx  spinner.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
src/lib/: media.test.ts  media.ts  tauri.ts
